Nav overflow fix on mobile pt 12

--- a/blocks/src/blocks/nav-container/style.scss
+++ b/blocks/src/blocks/nav-container/style.scss
@@ -103,12 +103,10 @@
         max-width: 500px;
         z-index: 9998;
         background-color: var(--wp--preset--color--base);
-        // height: 100vh;
-        // overflow: hidden;
+        height: 100%;
 
         .flyout-content {
-            // height: calc(100vh - (var(--wp--preset--spacing--60) * 2));
-            height: 100%;
+            height: calc(100% - var(--wp--preset--spacing--60));
             overflow-y: scroll;
             box-sizing: border-box;
         }
